# godot_dart

./: .gitignore  CONTRIBUTING.md  README  README.md  prepare.sh
.github/workflows/: build.yaml
docs/: memory.md
docs/devcontainer/: devcontainer.md  install.sh
example/: .gitignore
example/2d_tutorial/: .gitignore  example.gdextension  godot_dart.gdextension.uid  hud.tscn  icon.svg.import  logo_dart.svg.import  main.tscn  player.tscn  project.godot
example/2d_tutorial/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
example/2d_tutorial/fonts/: Xolonium-Regular.ttf.import
example/2d_tutorial/src/: .gitignore  analysis_options.yaml  godot_dart_scripts.g.dart  godot_dart_scripts.g.dart.uid  main.dart  main.dart.uid  pubspec.yaml
example/2d_tutorial/src/lib/: game_logic.dart  game_logic.dart.uid  game_logic.g.dart  game_logic.g.dart.uid  hud.dart  hud.dart.uid  hud.g.dart  hud.g.dart.uid  mob.dart  mob.dart.uid  mob.g.dart  mob.g.dart.uid  player.dart  player.dart.uid  player.g.dart  player.g.dart.uid  simple.dart
example/networking-demo/: .gitignore  icon.svg.import  logo_dart.svg.import  project.godot  world.tscn
example/networking-demo/src/: analysis_options.yaml  godot_dart_scripts.g.dart  main.dart
example/networking-demo/src/lib/: world.dart  world.g.dart
godot-headers/godot/: gdextension_interface.h
simple/: .gitignore  example.gdextension  hud.tscn  main.tscn  mob.tscn  player.tscn  project.godot  test.gd  test.tscn
simple/art/: enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_2.png.import  enemyWalking_2.png.import  playerGrey_up1.png.import
simple/fonts/: Xolonium-Regular.ttf.import
simple/src/: .gitignore  analysis_options.yaml  game_logic.dart  hud.dart  main.dart  mob.dart  player.dart  pubspec.yaml  simple.dart
simple/src/lib/: mob.dart
src/assets/: godot_dart.gdextension
src/assets/src/: .gitignore  godot_dart_scripts.g.dart  main.dart  pubspec.yaml
src/assets/src/.dart_tool/: package_config.json
src/cpp/: .clang-format  CMakeLists.txt  dart_binding_c_interface.cpp  dart_bindings.cpp  dart_bindings.h  dart_godot_binding.cpp  dart_godot_binding.h  dart_helpers.h  dart_instance_binding.cpp  dart_instance_binding.h  dart_script_instance.cpp  dart_script_instance.h  dart_vtable_wrapper.cpp  dart_vtable_wrapper.h  gde_c_interface.cpp  gde_c_interface.h  gde_dart_converters.cpp  gde_dart_converters.h  gde_wrapper..cpp  gde_wrapper.cpp  gde_wrapper.h  godot_dart.cpp  godot_dart.sln  godot_dart.vcxproj  godot_dart.vcxproj.filters  godot_dart_runtime_plugin.cpp  godot_dart_runtime_plugin.h  godot_string_helpers.h  godot_string_wrappers.cpp  godot_string_wrappers.h  ref_counted_wrapper.cpp  ref_counted_wrapper.h
src/cpp/editor/: dart_command_runner.cpp  dart_command_runner.h  dart_progress_dialog.cpp  dart_progress_dialog.h  dart_templates.cpp  dart_templates.h  dart_version_constants.h  godot_dart_editor_plugin.cpp  godot_dart_editor_plugin.h  progress_dialog.cpp  progress_dialog.h
src/cpp/script/: dart_resource_format.cpp  dart_resource_format.h  dart_script.cpp  dart_script.h  dart_script_instance.cpp  dart_script_instance.h  dart_script_language.cpp  dart_script_language.h
src/dart/: .gitignore  analysis_options.yaml  pubspec.yaml
src/dart/godot_dart/: .pubignore  CHANGELOG.md  analysis_options.yaml  pubspec.yaml
src/dart/godot_dart/lib/: godot_dart.dart
src/dart/godot_dart/lib/src/: godot_dart_extensions.dart
src/dart/godot_dart/lib/src/annotations/: godot_script.dart
src/dart/godot_dart/lib/src/core/: core.dart  core_types.dart  gdextension.dart  gdextension_ffi_bindings.dart  godot_dart_native_bindings.dart  godot_dart_native_bridge.dart  math_extensions.dart  property_info.dart  rpc_info.dart  signals.dart  type_info.dart  type_resolver.dart
src/dart/godot_dart/lib/src/extensions/: async_extensions.dart  core_extensions.dart
src/dart/godot_dart/lib/src/reloader/: hot_reloader.dart
src/dart/godot_dart/lib/src/script/: dart_resource_format.dart  dart_script.dart  dart_script_language.dart
src/dart/godot_dart/lib/src/variant/: array.dart  basis.dart  structs.dart  transform3d.dart  typed_array.dart  variant.dart  vector2.dart  vector3.dart
src/dart/godot_dart_build/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  pubspec_overrides.yaml
src/dart/godot_dart_build/.dart_tool/: package_config.json
src/dart/godot_dart_build/lib/: builder.dart
src/dart/godot_dart_build/lib/src/: godot_dart_generator.dart  godot_script_generator.dart
src/dart/lib/: godot_dart.dart
src/dart/lib/src/: gdextension.dart  gdextension_bindings.dart  godot_dart_extensions.dart  godot_dart_native_bindings.dart  variant.dart  wrapped.dart
src/dart/lib/src/core/: core_types.dart  gdextension.dart  gdextension_ffi_bindings.dart  godot_dart_native_bindings.dart  object.dart  property_info.dart  type_info.dart  wrapped.dart
src/dart/lib/src/script/: dart_resource_format.dart  dart_script.dart  dart_script_language.dart
src/dart/lib/src/variant/: typed_array.dart  variant.dart
src/dart_dll/include/: dart_dll.h
tools/binding_generator/: README.md  analysis_options.yaml  pubspec.yaml
tools/binding_generator/lib/: binding_generator.dart
tools/binding_generator/lib/src/: builtin_type_generator.dart  code_sink.dart  common_helpers.dart  engine_type_generator.dart  gdstring_additional.dart  godot_api_info.dart  godot_extension_api_json.dart  native_structures_generator.dart  string_extensions.dart  type_helpers.dart  type_info.dart
tools/binding_generator/lib/src/generators/: builtin_type_generator.dart  engine_type_generator.dart  native_structures_generator.dart  type_resolver_generator.dart
tools/fetch_dart/: pubspec.yaml
